# overcyber-reloaded-neon

./: CONTENT_MANAGEMENT.md  DEPLOY.md  README.md  build.py  index.html  server.py  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
backend/: Cargo.toml  README.md
backend/migrations/: 0001_init.sql  0002_seed.sql
backend/nginx/: site.conf.example
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs
backend/src/handlers/: about.rs  auth.rs  comments.rs  contact.rs  migrate.rs  mod.rs  posts.rs  pow.rs  projects.rs  resume.rs
backend/src/middleware/: mod.rs
backend/src/security/: argon2id.rs  csrf.rs  headers.rs  mod.rs  pow.rs  ratelimit.rs  session.rs  totp.rs
backend/systemd/: overcyber.service.example
src/: App.css  App.tsx  index.css  main.tsx
src/components/: AdminBackendPanel.tsx  GlitchEffect.tsx  Layout.tsx  NavigationLinks.tsx  ProfileHeader.tsx  SocialIcons.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/hooks/: use-managed-content.ts
src/lib/: api.ts  pow.ts
src/pages/: About-new.tsx  About.tsx  Admin.tsx  Blog.tsx  BlogPost.tsx  Contact.tsx  Index.tsx  NotFound.tsx  Projects.tsx
