[package]
name = "overcyber-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
# Pinned to versions compatible with Rust 1.75 (no edition2024 requirement).
axum = { version = "=0.7.5", features = ["macros", "http2"] }
tokio = { version = "=1.38.1", features = ["full"] }
tower = "=0.4.13"
tower-http = { version = "=0.5.2", features = ["trace", "limit", "cors"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

rusqlite = { version = "=0.31.0", features = ["bundled", "chrono"] }
r2d2 = "=0.8.10"
r2d2_sqlite = "=0.24.0"

serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"

# Crypto primitives (audited RustCrypto crates — re-implementing these is unsafe)
argon2 = "=0.5.3"
hmac = "=0.12.1"
sha2 = "=0.10.8"
sha1 = "=0.10.6"
subtle = "=2.5.0"
base32 = "=0.5.1"
base64 = "=0.22.1"
rand = "=0.8.5"
base64ct = "=1.6.0"
indexmap = "=2.2.6"
hashbrown = "=0.14.5"

uuid = { version = "=1.10.0", features = ["v4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
anyhow = "=1.0.86"
thiserror = "=1.0.63"

